--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "apollo-boost": "^0.4.4",
     "core-js": "^2.6.5",
+    "graphql": "^14.5.4",
+    "graphql-tag": "^2.10.1",
     "vue": "^2.6.10",
+    "vue-the-mask": "^0.11.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
